0.6/_sources/user-guide/general/customizations/examples/plot_configure_check_conditions.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "user-guide/general/customizations/examples/plot_configure_check_conditions.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_user-guide_general_customizations_examples_plot_configure_check_conditions.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_user-guide_general_customizations_examples_plot_configure_check_conditions.py:


Configure Check Conditions
**************************

The following guide includes different options for configuring a check's condition(s):

* `Add Condition <#add-condition>`__
* `Remove / Edit a Condition <#remove-edit-a-condition>`__
* `Add a Custom Condition <#add-a-custom-condition>`__
* `Set Custom Condition Category <#set-custom-condition-category>`__

Add Condition
=============
In order to add a condition to an existing check, we can use any of the pre-defined
conditions for that check. The naming convention for the methods that add the
condition is ``add_condition_...``.

If you want to create and add your custom condition logic for parsing the check's
result value, see `Add a Custom Condition <#add-a-custom-condition>`__.

.. GENERATED FROM PYTHON SOURCE LINES 24-26

Add a condition to a new check
------------------------------

.. GENERATED FROM PYTHON SOURCE LINES 26-32

.. code-block:: default


    from deepchecks.tabular.checks import DatasetsSizeComparison

    check = DatasetsSizeComparison().add_condition_test_size_not_smaller_than(1000)
    check





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    DatasetsSizeComparison
    	Conditions:
    		0: Test dataset size is not smaller than 1000



.. GENERATED FROM PYTHON SOURCE LINES 33-37

Conditions are used mainly in the context of a Suite, and displayed in the
Conditions Summary table. For example how to run in a suite you can look at
`Add a Custom Condition <#add-a-custom-condition>`__ or if you would like to
run the conditions outside of suite you can execute:

.. GENERATED FROM PYTHON SOURCE LINES 37-47

.. code-block:: default


    from deepchecks.tabular import Dataset
    import pandas as pd
    # Dummy data
    train_dataset = Dataset(pd.DataFrame(data={'x': [1,2,3,4,5,6,7,8,9]}))
    test_dataset = Dataset(pd.DataFrame(data={'x': [1,2,3]}))

    condition_results = check.conditions_decision(check.run(train_dataset, test_dataset))
    condition_results





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    [{'details': 'Test dataset size is 3', 'category': <ConditionCategory.FAIL: 'FAIL'>, 'name': 'Test dataset size is not smaller than 1000'}]



.. GENERATED FROM PYTHON SOURCE LINES 48-58

Add a condition to a check in a suite
-------------------------------------
If we want to add a conditon to a check within an existing suite, we should first
find the Check's ID within the suite, and then add the condition to it, by running
the relevant ``add_condition_`` method on that check's instance. See the next section
to understand how to do so.

The condition will then be appended to the list of conditions on that check (or be
the first one if no conditions are defined), and each condition will be evaluated
separately when running the suite.

.. GENERATED FROM PYTHON SOURCE LINES 60-68

Remove / Edit a Condition
=========================
Deepchecks provides different kinds of default suites, which come with pre-defined
conditions. You may want to remove a condition in case it isn't needed for you, or
you may want to change the condition's parameters (since conditions functions are immutable).

To remove a condition, start by printing the Suite and identifing the Check's ID,
and the Condition's ID:

.. GENERATED FROM PYTHON SOURCE LINES 68-74

.. code-block:: default


    from deepchecks.tabular.suites import train_test_leakage

    suite = train_test_leakage()
    suite





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    Train Test Leakage Suite: [
    	0: DateTrainTestLeakageDuplicates
    		Conditions:
    			0: Date leakage ratio is not greater than 0%
    	1: DateTrainTestLeakageOverlap
    		Conditions:
    			0: Date leakage ratio is not greater than 0%
    	2: SingleFeatureContributionTrainTest(ppscore_params={})
    		Conditions:
    			0: Train-Test features' Predictive Power Score difference is not greater than 0.2
    			1: Train features' Predictive Power Score is not greater than 0.7
    	3: TrainTestSamplesMix
    		Conditions:
    			0: Percentage of test data samples that appear in train data not greater than 10%
    	4: IdentifierLeakage(ppscore_params={})
    		Conditions:
    			0: Identifier columns PPS is not greater than 0
    	5: IndexTrainTestLeakage
    		Conditions:
    			0: Ratio of leaking indices is not greater than 0%
    ]



.. GENERATED FROM PYTHON SOURCE LINES 75-76

After we found the IDs we can remove the Condition:

.. GENERATED FROM PYTHON SOURCE LINES 76-84

.. code-block:: default


    # Access check by id
    check = suite[2]
    # Remove condition by id
    check.remove_condition(0)

    suite





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    Train Test Leakage Suite: [
    	0: DateTrainTestLeakageDuplicates
    		Conditions:
    			0: Date leakage ratio is not greater than 0%
    	1: DateTrainTestLeakageOverlap
    		Conditions:
    			0: Date leakage ratio is not greater than 0%
    	2: SingleFeatureContributionTrainTest(ppscore_params={})
    		Conditions:
    			1: Train features' Predictive Power Score is not greater than 0.7
    	3: TrainTestSamplesMix
    		Conditions:
    			0: Percentage of test data samples that appear in train data not greater than 10%
    	4: IdentifierLeakage(ppscore_params={})
    		Conditions:
    			0: Identifier columns PPS is not greater than 0
    	5: IndexTrainTestLeakage
    		Conditions:
    			0: Ratio of leaking indices is not greater than 0%
    ]



.. GENERATED FROM PYTHON SOURCE LINES 85-87

Now if we want we can also re-add the Condition using the built-in methods on the check,
with a different parameter.

.. GENERATED FROM PYTHON SOURCE LINES 87-93

.. code-block:: default


    # Re-add the condition with new parameter
    check.add_condition_feature_pps_difference_not_greater_than(0.01)

    suite





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    Train Test Leakage Suite: [
    	0: DateTrainTestLeakageDuplicates
    		Conditions:
    			0: Date leakage ratio is not greater than 0%
    	1: DateTrainTestLeakageOverlap
    		Conditions:
    			0: Date leakage ratio is not greater than 0%
    	2: SingleFeatureContributionTrainTest(ppscore_params={})
    		Conditions:
    			1: Train features' Predictive Power Score is not greater than 0.7
    			2: Train-Test features' Predictive Power Score difference is not greater than 0.01
    	3: TrainTestSamplesMix
    		Conditions:
    			0: Percentage of test data samples that appear in train data not greater than 10%
    	4: IdentifierLeakage(ppscore_params={})
    		Conditions:
    			0: Identifier columns PPS is not greater than 0
    	5: IndexTrainTestLeakage
    		Conditions:
    			0: Ratio of leaking indices is not greater than 0%
    ]



.. GENERATED FROM PYTHON SOURCE LINES 94-100

Add a Custom Condition
======================
In order to write conditions we first have to know what value a given check produces.

Let's look at the check ``DatasetsSizeComparison`` and see it's return value in
order to write a condition for it.

.. GENERATED FROM PYTHON SOURCE LINES 100-112

.. code-block:: default


    from deepchecks.tabular.checks import DatasetsSizeComparison
    from deepchecks.tabular import Dataset
    import pandas as pd

    # We'll use dummy data for the purpose of this demonstration
    train_dataset = Dataset(pd.DataFrame(data={'x': [1,2,3,4,5,6,7,8,9]}))
    test_dataset = Dataset(pd.DataFrame(data={'x': [1,2,3]}))

    result = DatasetsSizeComparison().run(train_dataset, test_dataset)
    result.value





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    {'Train': 9, 'Test': 3}



.. GENERATED FROM PYTHON SOURCE LINES 113-123

Now we know what the return value looks like. Let's add a new condition that validates
that the ratio between the train and test datasets size is inside a given range. To
create condition we need to use the ``add_condition`` method of the check which accepts
a condition name and a function. This function receives the value of the ``CheckResult``
that we saw above and should return either a boolean or a ``ConditionResult`` containing
a boolean and optional extra info that will be displayed in the Conditions Summary table.

*Note: When implementing a condition in a custom check, you may want to add a method
``add_condition_x()`` to allow any consumer of your check to apply the condition
(possibly with given parameters). For examples look at implemented Checks' source code*

.. GENERATED FROM PYTHON SOURCE LINES 123-145

.. code-block:: default


    from deepchecks.core import ConditionResult

    # Our parameters for the condition
    low_threshold = 0.4
    high_threshold = 0.6

    # Create the condition function
    def custom_condition(value: dict, low=low_threshold, high=high_threshold): 
        ratio = value['Test'] / value['Train']
        if low <= ratio <= high:
            return ConditionResult(ConditionCategory.PASS)
        else:
            # Note: if you doesn't care about the extra info, you can return directly a boolean
            return ConditionResult(ConditionCategory.FAIL, f'Test-Train ratio is {ratio:.2}')

    # Create the condition name
    condition_name = f'Test-Train ratio is between {low_threshold} to {high_threshold}'

    # Create check instance with the condition 
    check = DatasetsSizeComparison().add_condition(condition_name, custom_condition)








.. GENERATED FROM PYTHON SOURCE LINES 146-149

Now we will use a Suite to demonstrate the action of the condition, since the suite
runs the condition for us automatically and prints out a Conditions Summary table
(for all the conditions defined on the checks within the suite):

.. GENERATED FROM PYTHON SOURCE LINES 149-159

.. code-block:: default


    from deepchecks import Suite

    # Using suite to run check & condition
    suite = Suite('Suite for Condition',
        check
    )

    suite.run(train_dataset, test_dataset)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    Ability to import base tabular functionality from the `deepchecks` package directly is deprecated, please import from `deepchecks.tabular` instead
    Suite for Condition:   0%| | 0/1 [00:00<?, ? Check/s]    Suite for Condition:   0%| | 0/1 [00:00<?, ? Check/s, Check=Datasets Size Comparison]                                                                                     

.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <!--
        ~ ----------------------------------------------------------------------------
        ~ Copyright (C) 2021-2022 Deepchecks (https://www.deepchecks.com)
        ~
        ~ This file is part of Deepchecks.
        ~ Deepchecks is distributed under the terms of the GNU Affero General
        ~ Public License (version 3 or later).
        ~ You should have received a copy of the GNU Affero General Public License
        ~ along with Deepchecks.  If not, see <http://www.gnu.org/licenses/>.
        ~ ----------------------------------------------------------------------------
        ~
    -->
    <!DOCTYPE html>
    <html lang="en">
    <head>
        <meta charset="UTF-8">
        <title>Suite Output</title>
        <style>
            body {
                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
                font-size: 1rem;
                line-height: 1.5;
                color: #212529;
                text-align: left;
                max-width: 1200px;
                margin: auto;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt *,
            div.nbinput.container div.input_area pre,
            div.nboutput.container div.output_area pre,
            div.nbinput.container div.input_area .highlight,
            div.nboutput.container div.output_area .highlight {
                border: none;
                padding: 0;
                margin: 0;
                box-shadow: none;
            }

            div.nbinput.container > div[class*=highlight],
            div.nboutput.container > div[class*=highlight] {
                margin: 0;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt * {
                background: none;
            }

            div.nboutput.container div.output_area .highlight,
            div.nboutput.container div.output_area pre {
                background: unset;
            }

            div.nboutput.container div.output_area div.highlight {
                color: unset;  /* override Pygments text color */
            }

            /* avoid gaps between output lines */
            div.nboutput.container div[class*=highlight] pre {
                line-height: normal;
            }

            /* input/output containers */
            div.nbinput.container,
            div.nboutput.container {
                display: -webkit-flex;
                display: flex;
                align-items: flex-start;
                margin: 0;
                width: 100%;
            }
            @media (max-width: 540px) {
                div.nbinput.container,
                div.nboutput.container {
                    flex-direction: column;
                }
            }

            /* input container */
            div.nbinput.container {
                padding-top: 5px;
            }

            /* last container */
            div.nblast.container {
                padding-bottom: 5px;
            }

            /* input prompt */
            div.nbinput.container div.prompt pre {
                color: #307FC1;
            }

            /* output prompt */
            div.nboutput.container div.prompt pre {
                color: #BF5B3D;
            }

            /* all prompts */
            div.nbinput.container div.prompt,
            div.nboutput.container div.prompt {
                width: 4.5ex;
                padding-top: 5px;
                position: relative;
                user-select: none;
            }

            div.nbinput.container div.prompt > div,
            div.nboutput.container div.prompt > div {
                position: absolute;
                right: 0;
                margin-right: 0.3ex;
            }

            @media (max-width: 540px) {
                div.nbinput.container div.prompt,
                div.nboutput.container div.prompt {
                    width: unset;
                    text-align: left;
                    padding: 0.4em;
                }
                div.nboutput.container div.prompt.empty {
                    padding: 0;
                }

                div.nbinput.container div.prompt > div,
                div.nboutput.container div.prompt > div {
                    position: unset;
                }
            }

            /* disable scrollbars on prompts */
            div.nbinput.container div.prompt pre,
            div.nboutput.container div.prompt pre {
                overflow: hidden;
            }

            /* input/output area */
            div.nbinput.container div.input_area,
            div.nboutput.container div.output_area {
                -webkit-flex: 1;
                flex: 1;
                overflow: auto;
            }
            @media (max-width: 540px) {
                div.nbinput.container div.input_area,
                div.nboutput.container div.output_area {
                    width: 100%;
                }
            }

            /* input area */
            div.nbinput.container div.input_area {
                border: 1px solid #e0e0e0;
                border-radius: 2px;
                /*background: #f5f5f5;*/
            }

            /* override MathJax center alignment in output cells */
            div.nboutput.container div[class*=MathJax] {
                text-align: left !important;
            }

            /* override sphinx.ext.imgmath center alignment in output cells */
            div.nboutput.container div.math p {
                text-align: left;
            }

            /* standard error */
            div.nboutput.container div.output_area.stderr {
                background: #fdd;
            }

            /* ANSI colors */
            .ansi-black-fg { color: #3E424D; }
            .ansi-black-bg { background-color: #3E424D; }
            .ansi-black-intense-fg { color: #282C36; }
            .ansi-black-intense-bg { background-color: #282C36; }
            .ansi-red-fg { color: #E75C58; }
            .ansi-red-bg { background-color: #E75C58; }
            .ansi-red-intense-fg { color: #B22B31; }
            .ansi-red-intense-bg { background-color: #B22B31; }
            .ansi-green-fg { color: #00A250; }
            .ansi-green-bg { background-color: #00A250; }
            .ansi-green-intense-fg { color: #007427; }
            .ansi-green-intense-bg { background-color: #007427; }
            .ansi-yellow-fg { color: #DDB62B; }
            .ansi-yellow-bg { background-color: #DDB62B; }
            .ansi-yellow-intense-fg { color: #B27D12; }
            .ansi-yellow-intense-bg { background-color: #B27D12; }
            .ansi-blue-fg { color: #208FFB; }
            .ansi-blue-bg { background-color: #208FFB; }
            .ansi-blue-intense-fg { color: #0065CA; }
            .ansi-blue-intense-bg { background-color: #0065CA; }
            .ansi-magenta-fg { color: #D160C4; }
            .ansi-magenta-bg { background-color: #D160C4; }
            .ansi-magenta-intense-fg { color: #A03196; }
            .ansi-magenta-intense-bg { background-color: #A03196; }
            .ansi-cyan-fg { color: #60C6C8; }
            .ansi-cyan-bg { background-color: #60C6C8; }
            .ansi-cyan-intense-fg { color: #258F8F; }
            .ansi-cyan-intense-bg { background-color: #258F8F; }
            .ansi-white-fg { color: #C5C1B4; }
            .ansi-white-bg { background-color: #C5C1B4; }
            .ansi-white-intense-fg { color: #A1A6B2; }
            .ansi-white-intense-bg { background-color: #A1A6B2; }

            .ansi-default-inverse-fg { color: #FFFFFF; }
            .ansi-default-inverse-bg { background-color: #000000; }

            .ansi-bold { font-weight: bold; }
            .ansi-underline { text-decoration: underline; }


            div.nbinput.container div.input_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight].math,
            div.nboutput.container div.output_area.rendered_html,
            div.nboutput.container div.output_area > div.output_javascript,
            div.nboutput.container div.output_area:not(.rendered_html) > img{
                padding: 5px;
                margin: 0;
            }

            /* fix copybtn overflow problem in chromium (needed for 'sphinx_copybutton') */
            div.nbinput.container div.input_area > div[class^='highlight'],
            div.nboutput.container div.output_area > div[class^='highlight']{
                overflow-y: hidden;
            }

            /* hide copybtn icon on prompts (needed for 'sphinx_copybutton') */
            .prompt .copybtn {
                display: none;
            }

            /* Some additional styling taken form the Jupyter notebook CSS */
            div.rendered_html table {
            border: none;
            border-collapse: collapse;
            border-spacing: 0;
            color: black;
            font-size: 12px;
            table-layout: fixed;
            }
            div.rendered_html thead {
            border-bottom: 1px solid black;
            vertical-align: bottom;
            }
            div.rendered_html tr,
            div.rendered_html th,
            div.rendered_html td {
            text-align: right;
            vertical-align: middle;
            padding: 0.5em 0.5em;
            line-height: normal;
            white-space: normal;
            max-width: none;
            border: none;
            }
            div.rendered_html th {
            font-weight: bold;
            }
            div.rendered_html tbody tr:nth-child(odd) {
            background: #f5f5f5;
            }
            div.rendered_html tbody tr:hover {
            background: rgba(66, 165, 245, 0.2);
            }
        </style>
        <script>
            (!window.navigator.onLine ? alert('needs internet connection') : '');
        </script>
    </head>
    <body>
    
    <script src="https://unpkg.com/@jupyter-widgets/html-manager@^0.20.1/dist/embed.js" crossorigin="anonymous"></script>
    <script type="application/vnd.jupyter.widget-state+json">
    {
      "version_major": 2,
      "version_minor": 0,
      "state": {
        "ea48c6cbe398471f9040dbd0cefc03aa": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "children": [
              "IPY_MODEL_a01e6ab1118347d09893f7466f07d446",
              "IPY_MODEL_6c54df406a284c7782f50badd1687fa9",
              "IPY_MODEL_391ea45bb09c4318bdbc6d248bfc0d1c"
            ],
            "layout": "IPY_MODEL_7239f462399243d1b38e407e30196e5c"
          }
        },
        "a01e6ab1118347d09893f7466f07d446": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_4b6e4cd9a92049ac8877a19cb150f1a6",
            "style": "IPY_MODEL_c8b6b1fa7f394ad0b8890040c727665d",
            "value": "\n        <h1 id=\"summary_5TGSQ\">Suite for Condition</h1>\n        <p>\n            The suite is composed of the following checks: Datasets Size Comparison.<br>\n            Each check may contain conditions (which will result in pass / fail / warning / error\n            , represented by \n    <span style=\"color: green;display:inline-block\">\u2713</span> /\n    <span style=\"color: red;display:inline-block\">\u2716</span> /\n    <span style=\"color: orange;font-weight:bold;display:inline-block\">!</span> /\n    <span style=\"color: firebrick;font-weight:bold;display:inline-block\">\u2048</span>\n    ) as well as other outputs such as plots or tables.<br>\n            Suites, checks and conditions can all be modified. Read more about\n            <a href=https://docs.deepchecks.com/en/stable/examples/guides/create_a_custom_suite.html?utm_source=display_output&utm_medium=referral&utm_campaign=suite_link target=\"_blank\">custom suites</a>.\n        </p>\n        "
          }
        },
        "4b6e4cd9a92049ac8877a19cb150f1a6": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "c8b6b1fa7f394ad0b8890040c727665d": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "6c54df406a284c7782f50badd1687fa9": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_f45b64e0f531424480d66ba181fb48f5",
            "style": "IPY_MODEL_b26f6c2306574cce816b049a377bf002",
            "value": "<style>.jupyter-widgets.widget-tab > .p-TabBar .p-TabBar-tab {flex: 0 1 auto}</style>"
          }
        },
        "f45b64e0f531424480d66ba181fb48f5": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "b26f6c2306574cce816b049a377bf002": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "391ea45bb09c4318bdbc6d248bfc0d1c": {
          "model_name": "TabModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "_titles": {
              "0": "Checks With Conditions",
              "1": "Checks Without Conditions",
              "2": "Checks Without Output"
            },
            "children": [
              "IPY_MODEL_83800d57f6ab407db08886c12463dc5f",
              "IPY_MODEL_c91377259c534650a364b0ea411ca218",
              "IPY_MODEL_e97e96a71e8e422397617edf5ff3918a"
            ],
            "layout": "IPY_MODEL_0f2bcf00a29d4d4c9697ab19e22ed93f"
          }
        },
        "83800d57f6ab407db08886c12463dc5f": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [
              "rendered_html",
              "jp-RenderedHTMLCommon",
              "jp-RenderedHTML",
              "jp-OutputArea-output"
            ],
            "children": [
              "IPY_MODEL_f420eee3850147efbd83ad14e4dd46f7",
              "IPY_MODEL_ef7656cd4835436999eecba0a5bee81b",
              "IPY_MODEL_9b5e1a685b7f4664a703ef533f616490",
              "IPY_MODEL_5bbb15ec5ab74d7fadc25f1cddf46dc6"
            ],
            "layout": "IPY_MODEL_abb7768d76b743eb9f9724dacff40e44"
          }
        },
        "f420eee3850147efbd83ad14e4dd46f7": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_ac201abd998b4e249314563b9c1ff79e",
            "style": "IPY_MODEL_fa604896abef4c0fa1b69969a53c7b07",
            "value": "<h2>Conditions Summary</h2>"
          }
        },
        "ac201abd998b4e249314563b9c1ff79e": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "fa604896abef4c0fa1b69969a53c7b07": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "ef7656cd4835436999eecba0a5bee81b": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [
              "rendered_html",
              "jp-RenderedHTMLCommon",
              "jp-RenderedHTML",
              "jp-OutputArea-output"
            ],
            "children": [
              "IPY_MODEL_b3f74d37fe9b441180fc6f2780a5c471"
            ],
            "layout": "IPY_MODEL_458e6cfc527d4303b2369807eaa8baa8"
          }
        },
        "b3f74d37fe9b441180fc6f2780a5c471": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_8e90e2f6646247bdaa754a34bea09552",
            "style": "IPY_MODEL_59181a013a4c42c0b01b23e24431e17b",
            "value": "<style type=\"text/css\">\n#T_2dae7 table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_2dae7 thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_2dae7 tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_2dae7 th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_2dae7 td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n</style>\n<table id=\"T_2dae7\">\n  <thead>\n    <tr>\n      <th id=\"T_2dae7_level0_col0\" class=\"col_heading level0 col0\" >Status</th>\n      <th id=\"T_2dae7_level0_col1\" class=\"col_heading level0 col1\" >Check</th>\n      <th id=\"T_2dae7_level0_col2\" class=\"col_heading level0 col2\" >Condition</th>\n      <th id=\"T_2dae7_level0_col3\" class=\"col_heading level0 col3\" >More Info</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td id=\"T_2dae7_row0_col0\" class=\"data row0 col0\" ><div style=\"color: firebrick;text-align: center;font-weight:bold\">\u2048</div></td>\n      <td id=\"T_2dae7_row0_col1\" class=\"data row0 col1\" ><a href=#DatasetsSizeComparison_5TGSQ>Datasets Size Comparison</a></td>\n      <td id=\"T_2dae7_row0_col2\" class=\"data row0 col2\" >Test-Train ratio is between 0.4 to 0.6</td>\n      <td id=\"T_2dae7_row0_col3\" class=\"data row0 col3\" >Exception in condition: NameError: name 'ConditionCategory' is not defined</td>\n    </tr>\n  </tbody>\n</table>\n"
          }
        },
        "8e90e2f6646247bdaa754a34bea09552": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "59181a013a4c42c0b01b23e24431e17b": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "458e6cfc527d4303b2369807eaa8baa8": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "9b5e1a685b7f4664a703ef533f616490": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_25a0a4fc275a4ef0a94121fff112ba23",
            "style": "IPY_MODEL_9528ce7ad27846c189a1a9a206e3ce34",
            "value": "<h2>Check With Conditions Output</h2>"
          }
        },
        "25a0a4fc275a4ef0a94121fff112ba23": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "9528ce7ad27846c189a1a9a206e3ce34": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "5bbb15ec5ab74d7fadc25f1cddf46dc6": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "children": [
              "IPY_MODEL_8c1308c2e7a0465db7ced4c5e41ab345"
            ],
            "layout": "IPY_MODEL_7512574b17a94397aae224df4c89553a"
          }
        },
        "8c1308c2e7a0465db7ced4c5e41ab345": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_a42ea671e4274fa6b69c603da66107de",
            "style": "IPY_MODEL_8e825f739f8841569070406a00bb9d2d",
            "value": "<h4 id=\"DatasetsSizeComparison_5TGSQ\">Datasets Size Comparison</h4><p>Verify test dataset size comparing it to the train dataset size. <a href=\"https://docs.deepchecks.com/0.6.1/examples/tabular/checks/methodology/examples/plot_datasets_size_comparison.html?utm_source=display_output&utm_medium=referral&utm_campaign=check_link\" target=\"_blank\">Read More...</a></p><h5>Conditions Summary</h5><style type=\"text/css\">\n#T_ffcf9 table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_ffcf9 thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_ffcf9 tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_ffcf9 th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_ffcf9 td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n</style>\n<table id=\"T_ffcf9\">\n  <thead>\n    <tr>\n      <th id=\"T_ffcf9_level0_col0\" class=\"col_heading level0 col0\" >Status</th>\n      <th id=\"T_ffcf9_level0_col1\" class=\"col_heading level0 col1\" >Condition</th>\n      <th id=\"T_ffcf9_level0_col2\" class=\"col_heading level0 col2\" >More Info</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td id=\"T_ffcf9_row0_col0\" class=\"data row0 col0\" ><div style=\"color: firebrick;text-align: center;font-weight:bold\">\u2048</div></td>\n      <td id=\"T_ffcf9_row0_col1\" class=\"data row0 col1\" >Test-Train ratio is between 0.4 to 0.6</td>\n      <td id=\"T_ffcf9_row0_col2\" class=\"data row0 col2\" >Exception in condition: NameError: name 'ConditionCategory' is not defined</td>\n    </tr>\n  </tbody>\n</table>\n<h5>Additional Outputs</h5><style type=\"text/css\">\n#T_663ff table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_663ff thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_663ff tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_663ff th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_663ff td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n</style>\n<table id=\"T_663ff\">\n  <thead>\n    <tr>\n      <th class=\"blank level0\" >&nbsp;</th>\n      <th id=\"T_663ff_level0_col0\" class=\"col_heading level0 col0\" >Train</th>\n      <th id=\"T_663ff_level0_col1\" class=\"col_heading level0 col1\" >Test</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th id=\"T_663ff_level0_row0\" class=\"row_heading level0 row0\" >Size</th>\n      <td id=\"T_663ff_row0_col0\" class=\"data row0 col0\" >9</td>\n      <td id=\"T_663ff_row0_col1\" class=\"data row0 col1\" >3</td>\n    </tr>\n  </tbody>\n</table>\n<br><a href=\"#summary_5TGSQ\" style=\"font-size: 14px\">Go to top</a>"
          }
        },
        "a42ea671e4274fa6b69c603da66107de": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "8e825f739f8841569070406a00bb9d2d": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "7512574b17a94397aae224df4c89553a": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "abb7768d76b743eb9f9724dacff40e44": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "c91377259c534650a364b0ea411ca218": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [
              "rendered_html",
              "jp-RenderedHTMLCommon",
              "jp-RenderedHTML",
              "jp-OutputArea-output"
            ],
            "children": [
              "IPY_MODEL_0bbf47e585af4b1486145c0fbc410df7",
              "IPY_MODEL_d6229692396a4c939023c37f523f0246"
            ],
            "layout": "IPY_MODEL_6db54bc1f6d4467fbfb73b07d6acdd1f"
          }
        },
        "0bbf47e585af4b1486145c0fbc410df7": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_7f9eca72f1304eeeb03bcf3037335f36",
            "style": "IPY_MODEL_007a5d893b7a4b94a2aca34b3ae71767",
            "value": "<h2>Check Without Conditions Output</h2>"
          }
        },
        "7f9eca72f1304eeeb03bcf3037335f36": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "007a5d893b7a4b94a2aca34b3ae71767": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "d6229692396a4c939023c37f523f0246": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_0680d6e7b0de40bfa66fa4d020453aa2",
            "style": "IPY_MODEL_2e0fdbbb90c74932a15adfc8ac1fc46c",
            "value": "<p>No outputs to show.</p>"
          }
        },
        "0680d6e7b0de40bfa66fa4d020453aa2": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "2e0fdbbb90c74932a15adfc8ac1fc46c": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "6db54bc1f6d4467fbfb73b07d6acdd1f": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "e97e96a71e8e422397617edf5ff3918a": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "children": [
              "IPY_MODEL_05c04374d4ab44b2ba09151222e59116"
            ],
            "layout": "IPY_MODEL_c60e10fca44f4aec99b66a23c025da7b"
          }
        },
        "05c04374d4ab44b2ba09151222e59116": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_77dabad3ebb84c428c1efe1d1887649f",
            "style": "IPY_MODEL_a52dbb6f0f5949c58946297146f357b0",
            "value": "<p>No outputs to show.</p>"
          }
        },
        "77dabad3ebb84c428c1efe1d1887649f": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "a52dbb6f0f5949c58946297146f357b0": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "c60e10fca44f4aec99b66a23c025da7b": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "0f2bcf00a29d4d4c9697ab19e22ed93f": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "7239f462399243d1b38e407e30196e5c": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        }
      }
    }
    </script>
    <script type="application/vnd.jupyter.widget-view+json">
    {"version_major": 2, "version_minor": 0, "model_id": "ea48c6cbe398471f9040dbd0cefc03aa"}
    </script>

    </body>
    </html>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 160-165

Set Custom Condition Category
=============================
When writing your own condition logic, you can decide to mark a condition result
as either fail or warn, by passing the category to the ConditionResult object.
For example we can even write condition which sets the category based on severity of the result:

.. GENERATED FROM PYTHON SOURCE LINES 165-181

.. code-block:: default


    from deepchecks.core import ConditionResult, ConditionCategory

    # Our parameters for the condition
    low_threshold = 0.3
    high_threshold = 0.7

    # Create the condition function for check `DatasetsSizeComparison`
    def custom_condition(value: dict): 
        ratio = value['Test'] / value['Train']
        if low_threshold <= ratio <= high_threshold:
            return ConditionResult(ConditionCategory.PASS)
        elif ratio < low_threshold:
            return ConditionResult(ConditionCategory.FAIL, f'Test-Train ratio is {ratio:.2}', ConditionCategory.FAIL)
        else:
            return ConditionResult(ConditionCategory.FAIL, f'Test-Train ratio is {ratio:.2}', ConditionCategory.WARN)








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.081 seconds)


.. _sphx_glr_download_user-guide_general_customizations_examples_plot_configure_check_conditions.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_configure_check_conditions.py <plot_configure_check_conditions.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_configure_check_conditions.ipynb <plot_configure_check_conditions.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
