0.7/_sources/user-guide/general/customizations/examples/plot_configure_check_conditions.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "user-guide/general/customizations/examples/plot_configure_check_conditions.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_user-guide_general_customizations_examples_plot_configure_check_conditions.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_user-guide_general_customizations_examples_plot_configure_check_conditions.py:


Configure Check Conditions
**************************

The following guide includes different options for configuring a check's condition(s):

* `Add Condition <#add-condition>`__
* `Remove / Edit a Condition <#remove-edit-a-condition>`__
* `Add a Custom Condition <#add-a-custom-condition>`__
* `Set Custom Condition Category <#set-custom-condition-category>`__

Add Condition
=============
In order to add a condition to an existing check, we can use any of the pre-defined
conditions for that check. The naming convention for the methods that add the
condition is ``add_condition_...``.

If you want to create and add your custom condition logic for parsing the check's
result value, see `Add a Custom Condition <#add-a-custom-condition>`__.

.. GENERATED FROM PYTHON SOURCE LINES 24-26

Add a condition to a new check
------------------------------

.. GENERATED FROM PYTHON SOURCE LINES 26-32

.. code-block:: default


    from deepchecks.tabular.checks import DatasetsSizeComparison

    check = DatasetsSizeComparison().add_condition_test_size_not_smaller_than(1000)
    check





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    DatasetsSizeComparison
    	Conditions:
    		0: Test dataset size is not smaller than 1000



.. GENERATED FROM PYTHON SOURCE LINES 33-37

Conditions are used mainly in the context of a Suite, and displayed in the
Conditions Summary table. For example how to run in a suite you can look at
`Add a Custom Condition <#add-a-custom-condition>`__ or if you would like to
run the conditions outside of suite you can execute:

.. GENERATED FROM PYTHON SOURCE LINES 37-49

.. code-block:: default


    import pandas as pd

    from deepchecks.tabular import Dataset

    # Dummy data
    train_dataset = Dataset(pd.DataFrame(data={'x': [1,2,3,4,5,6,7,8,9]}))
    test_dataset = Dataset(pd.DataFrame(data={'x': [1,2,3]}))

    condition_results = check.conditions_decision(check.run(train_dataset, test_dataset))
    condition_results





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    It is recommended to initialize Dataset with categorical features by doing "Dataset(df, cat_features=categorical_list)". No categorical features were passed, therefore heuristically inferring categorical features in the data.
    0 categorical features were inferred

    [{'details': 'Test dataset contains 3 samples', 'category': <ConditionCategory.FAIL: 'FAIL'>, 'name': 'Test dataset size is not smaller than 1000'}]



.. GENERATED FROM PYTHON SOURCE LINES 50-60

Add a condition to a check in a suite
-------------------------------------
If we want to add a conditon to a check within an existing suite, we should first
find the Check's ID within the suite, and then add the condition to it, by running
the relevant ``add_condition_`` method on that check's instance. See the next section
to understand how to do so.

The condition will then be appended to the list of conditions on that check (or be
the first one if no conditions are defined), and each condition will be evaluated
separately when running the suite.

.. GENERATED FROM PYTHON SOURCE LINES 62-70

Remove / Edit a Condition
=========================
Deepchecks provides different kinds of default suites, which come with pre-defined
conditions. You may want to remove a condition in case it isn't needed for you, or
you may want to change the condition's parameters (since conditions functions are immutable).

To remove a condition, start by printing the Suite and identifing the Check's ID,
and the Condition's ID:

.. GENERATED FROM PYTHON SOURCE LINES 70-76

.. code-block:: default


    from deepchecks.tabular.suites import train_test_validation

    suite = train_test_validation()
    suite





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    Train Test Validation Suite: [
    	0: DatasetsSizeComparison
    		Conditions:
    			0: Test-Train size ratio is not smaller than 0.01
    	1: NewLabelTrainTest
    		Conditions:
    			0: Number of new label values is not greater than 0
    	2: CategoryMismatchTrainTest
    		Conditions:
    			0: Ratio of samples with a new category is not greater than 0%
    	3: StringMismatchComparison
    		Conditions:
    			0: No new variants allowed in test data
    	4: DateTrainTestLeakageDuplicates
    		Conditions:
    			0: Date leakage ratio is not greater than 0%
    	5: DateTrainTestLeakageOverlap
    		Conditions:
    			0: Date leakage ratio is not greater than 0%
    	6: IndexTrainTestLeakage
    		Conditions:
    			0: Ratio of leaking indices is not greater than 0%
    	7: IdentifierLeakage(ppscore_params={})
    		Conditions:
    			0: Identifier columns PPS is not greater than 0
    	8: TrainTestSamplesMix
    		Conditions:
    			0: Percentage of test data samples that appear in train data not greater than 10%
    	9: FeatureLabelCorrelationChange(ppscore_params={})
    		Conditions:
    			0: Train-Test features' Predictive Power Score difference is not greater than 0.2
    			1: Train features' Predictive Power Score is not greater than 0.7
    	10: TrainTestFeatureDrift
    		Conditions:
    			0: categorical drift score <= 0.2 and numerical drift score <= 0.1
    	11: TrainTestLabelDrift
    		Conditions:
    			0: categorical drift score <= 0.2 and numerical drift score <= 0.1 for label drift
    	12: WholeDatasetDrift
    		Conditions:
    			0: Drift value is not greater than 0.25
    ]



.. GENERATED FROM PYTHON SOURCE LINES 77-78

After we found the IDs we can remove the Condition:

.. GENERATED FROM PYTHON SOURCE LINES 78-86

.. code-block:: default


    # Access check by id
    check = suite[9]
    # Remove condition by id
    check.remove_condition(0)

    suite





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    Train Test Validation Suite: [
    	0: DatasetsSizeComparison
    		Conditions:
    			0: Test-Train size ratio is not smaller than 0.01
    	1: NewLabelTrainTest
    		Conditions:
    			0: Number of new label values is not greater than 0
    	2: CategoryMismatchTrainTest
    		Conditions:
    			0: Ratio of samples with a new category is not greater than 0%
    	3: StringMismatchComparison
    		Conditions:
    			0: No new variants allowed in test data
    	4: DateTrainTestLeakageDuplicates
    		Conditions:
    			0: Date leakage ratio is not greater than 0%
    	5: DateTrainTestLeakageOverlap
    		Conditions:
    			0: Date leakage ratio is not greater than 0%
    	6: IndexTrainTestLeakage
    		Conditions:
    			0: Ratio of leaking indices is not greater than 0%
    	7: IdentifierLeakage(ppscore_params={})
    		Conditions:
    			0: Identifier columns PPS is not greater than 0
    	8: TrainTestSamplesMix
    		Conditions:
    			0: Percentage of test data samples that appear in train data not greater than 10%
    	9: FeatureLabelCorrelationChange(ppscore_params={})
    		Conditions:
    			1: Train features' Predictive Power Score is not greater than 0.7
    	10: TrainTestFeatureDrift
    		Conditions:
    			0: categorical drift score <= 0.2 and numerical drift score <= 0.1
    	11: TrainTestLabelDrift
    		Conditions:
    			0: categorical drift score <= 0.2 and numerical drift score <= 0.1 for label drift
    	12: WholeDatasetDrift
    		Conditions:
    			0: Drift value is not greater than 0.25
    ]



.. GENERATED FROM PYTHON SOURCE LINES 87-89

Now if we want we can also re-add the Condition using the built-in methods on the check,
with a different parameter.

.. GENERATED FROM PYTHON SOURCE LINES 89-95

.. code-block:: default


    # Re-add the condition with new parameter
    check.add_condition_feature_pps_difference_not_greater_than(0.01)

    suite





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    Train Test Validation Suite: [
    	0: DatasetsSizeComparison
    		Conditions:
    			0: Test-Train size ratio is not smaller than 0.01
    	1: NewLabelTrainTest
    		Conditions:
    			0: Number of new label values is not greater than 0
    	2: CategoryMismatchTrainTest
    		Conditions:
    			0: Ratio of samples with a new category is not greater than 0%
    	3: StringMismatchComparison
    		Conditions:
    			0: No new variants allowed in test data
    	4: DateTrainTestLeakageDuplicates
    		Conditions:
    			0: Date leakage ratio is not greater than 0%
    	5: DateTrainTestLeakageOverlap
    		Conditions:
    			0: Date leakage ratio is not greater than 0%
    	6: IndexTrainTestLeakage
    		Conditions:
    			0: Ratio of leaking indices is not greater than 0%
    	7: IdentifierLeakage(ppscore_params={})
    		Conditions:
    			0: Identifier columns PPS is not greater than 0
    	8: TrainTestSamplesMix
    		Conditions:
    			0: Percentage of test data samples that appear in train data not greater than 10%
    	9: FeatureLabelCorrelationChange(ppscore_params={})
    		Conditions:
    			1: Train features' Predictive Power Score is not greater than 0.7
    			2: Train-Test features' Predictive Power Score difference is not greater than 0.01
    	10: TrainTestFeatureDrift
    		Conditions:
    			0: categorical drift score <= 0.2 and numerical drift score <= 0.1
    	11: TrainTestLabelDrift
    		Conditions:
    			0: categorical drift score <= 0.2 and numerical drift score <= 0.1 for label drift
    	12: WholeDatasetDrift
    		Conditions:
    			0: Drift value is not greater than 0.25
    ]



.. GENERATED FROM PYTHON SOURCE LINES 96-102

Add a Custom Condition
======================
In order to write conditions we first have to know what value a given check produces.

Let's look at the check ``DatasetsSizeComparison`` and see it's return value in
order to write a condition for it.

.. GENERATED FROM PYTHON SOURCE LINES 102-115

.. code-block:: default


    import pandas as pd

    from deepchecks.tabular import Dataset
    from deepchecks.tabular.checks import DatasetsSizeComparison

    # We'll use dummy data for the purpose of this demonstration
    train_dataset = Dataset(pd.DataFrame(data={'x': [1,2,3,4,5,6,7,8,9]}))
    test_dataset = Dataset(pd.DataFrame(data={'x': [1,2,3]}))

    result = DatasetsSizeComparison().run(train_dataset, test_dataset)
    result.value





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    It is recommended to initialize Dataset with categorical features by doing "Dataset(df, cat_features=categorical_list)". No categorical features were passed, therefore heuristically inferring categorical features in the data.
    0 categorical features were inferred

    {'Train': 9, 'Test': 3}



.. GENERATED FROM PYTHON SOURCE LINES 116-126

Now we know what the return value looks like. Let's add a new condition that validates
that the ratio between the train and test datasets size is inside a given range. To
create condition we need to use the ``add_condition`` method of the check which accepts
a condition name and a function. This function receives the value of the ``CheckResult``
that we saw above and should return either a boolean or a ``ConditionResult`` containing
a boolean and optional extra info that will be displayed in the Conditions Summary table.

*Note: When implementing a condition in a custom check, you may want to add a method
``add_condition_x()`` to allow any consumer of your check to apply the condition
(possibly with given parameters). For examples look at implemented Checks' source code*

.. GENERATED FROM PYTHON SOURCE LINES 126-148

.. code-block:: default


    from deepchecks.core import ConditionResult

    # Our parameters for the condition
    low_threshold = 0.4
    high_threshold = 0.6

    # Create the condition function
    def custom_condition(value: dict, low=low_threshold, high=high_threshold): 
        ratio = value['Test'] / value['Train']
        if low <= ratio <= high:
            return ConditionResult(ConditionCategory.PASS)
        else:
            # Note: if you doesn't care about the extra info, you can return directly a boolean
            return ConditionResult(ConditionCategory.FAIL, f'Test-Train ratio is {ratio:.2}')

    # Create the condition name
    condition_name = f'Test-Train ratio is between {low_threshold} to {high_threshold}'

    # Create check instance with the condition 
    check = DatasetsSizeComparison().add_condition(condition_name, custom_condition)








.. GENERATED FROM PYTHON SOURCE LINES 149-152

Now we will use a Suite to demonstrate the action of the condition, since the suite
runs the condition for us automatically and prints out a Conditions Summary table
(for all the conditions defined on the checks within the suite):

.. GENERATED FROM PYTHON SOURCE LINES 152-162

.. code-block:: default


    from deepchecks.tabular import Suite

    # Using suite to run check & condition
    suite = Suite('Suite for Condition',
        check
    )

    suite.run(train_dataset, test_dataset)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    Suite for Condition:
    |     | 0/1 [00:00<?, ? Check/s]                                                     

.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <!--
        ~ ----------------------------------------------------------------------------
        ~ Copyright (C) 2021-2022 Deepchecks (https://www.deepchecks.com)
        ~
        ~ This file is part of Deepchecks.
        ~ Deepchecks is distributed under the terms of the GNU Affero General
        ~ Public License (version 3 or later).
        ~ You should have received a copy of the GNU Affero General Public License
        ~ along with Deepchecks.  If not, see <http://www.gnu.org/licenses/>.
        ~ ----------------------------------------------------------------------------
        ~
    -->
    <!DOCTYPE html>
    <html lang="en">
    <head>
        <meta charset="UTF-8">
        <title>Suite for Condition</title>
        <style>
            body {
                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
                font-size: 1rem;
                line-height: 1.5;
                color: #212529;
                text-align: left;
                max-width: 1200px;
                margin: auto;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt *,
            div.nbinput.container div.input_area pre,
            div.nboutput.container div.output_area pre,
            div.nbinput.container div.input_area .highlight,
            div.nboutput.container div.output_area .highlight {
                border: none;
                padding: 0;
                margin: 0;
                box-shadow: none;
            }

            div.nbinput.container > div[class*=highlight],
            div.nboutput.container > div[class*=highlight] {
                margin: 0;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt * {
                background: none;
            }

            div.nboutput.container div.output_area .highlight,
            div.nboutput.container div.output_area pre {
                background: unset;
            }

            div.nboutput.container div.output_area div.highlight {
                color: unset;  /* override Pygments text color */
            }

            /* avoid gaps between output lines */
            div.nboutput.container div[class*=highlight] pre {
                line-height: normal;
            }

            /* input/output containers */
            div.nbinput.container,
            div.nboutput.container {
                display: -webkit-flex;
                display: flex;
                align-items: flex-start;
                margin: 0;
                width: 100%;
            }
            @media (max-width: 540px) {
                div.nbinput.container,
                div.nboutput.container {
                    flex-direction: column;
                }
            }

            /* input container */
            div.nbinput.container {
                padding-top: 5px;
            }

            /* last container */
            div.nblast.container {
                padding-bottom: 5px;
            }

            /* input prompt */
            div.nbinput.container div.prompt pre {
                color: #307FC1;
            }

            /* output prompt */
            div.nboutput.container div.prompt pre {
                color: #BF5B3D;
            }

            /* all prompts */
            div.nbinput.container div.prompt,
            div.nboutput.container div.prompt {
                width: 4.5ex;
                padding-top: 5px;
                position: relative;
                user-select: none;
            }

            div.nbinput.container div.prompt > div,
            div.nboutput.container div.prompt > div {
                position: absolute;
                right: 0;
                margin-right: 0.3ex;
            }

            @media (max-width: 540px) {
                div.nbinput.container div.prompt,
                div.nboutput.container div.prompt {
                    width: unset;
                    text-align: left;
                    padding: 0.4em;
                }
                div.nboutput.container div.prompt.empty {
                    padding: 0;
                }

                div.nbinput.container div.prompt > div,
                div.nboutput.container div.prompt > div {
                    position: unset;
                }
            }

            /* disable scrollbars on prompts */
            div.nbinput.container div.prompt pre,
            div.nboutput.container div.prompt pre {
                overflow: hidden;
            }

            /* input/output area */
            div.nbinput.container div.input_area,
            div.nboutput.container div.output_area {
                -webkit-flex: 1;
                flex: 1;
                overflow: auto;
            }
            @media (max-width: 540px) {
                div.nbinput.container div.input_area,
                div.nboutput.container div.output_area {
                    width: 100%;
                }
            }

            /* input area */
            div.nbinput.container div.input_area {
                border: 1px solid #e0e0e0;
                border-radius: 2px;
                /*background: #f5f5f5;*/
            }

            /* override MathJax center alignment in output cells */
            div.nboutput.container div[class*=MathJax] {
                text-align: left !important;
            }

            /* override sphinx.ext.imgmath center alignment in output cells */
            div.nboutput.container div.math p {
                text-align: left;
            }

            /* standard error */
            div.nboutput.container div.output_area.stderr {
                background: #fdd;
            }

            /* ANSI colors */
            .ansi-black-fg { color: #3E424D; }
            .ansi-black-bg { background-color: #3E424D; }
            .ansi-black-intense-fg { color: #282C36; }
            .ansi-black-intense-bg { background-color: #282C36; }
            .ansi-red-fg { color: #E75C58; }
            .ansi-red-bg { background-color: #E75C58; }
            .ansi-red-intense-fg { color: #B22B31; }
            .ansi-red-intense-bg { background-color: #B22B31; }
            .ansi-green-fg { color: #00A250; }
            .ansi-green-bg { background-color: #00A250; }
            .ansi-green-intense-fg { color: #007427; }
            .ansi-green-intense-bg { background-color: #007427; }
            .ansi-yellow-fg { color: #DDB62B; }
            .ansi-yellow-bg { background-color: #DDB62B; }
            .ansi-yellow-intense-fg { color: #B27D12; }
            .ansi-yellow-intense-bg { background-color: #B27D12; }
            .ansi-blue-fg { color: #208FFB; }
            .ansi-blue-bg { background-color: #208FFB; }
            .ansi-blue-intense-fg { color: #0065CA; }
            .ansi-blue-intense-bg { background-color: #0065CA; }
            .ansi-magenta-fg { color: #D160C4; }
            .ansi-magenta-bg { background-color: #D160C4; }
            .ansi-magenta-intense-fg { color: #A03196; }
            .ansi-magenta-intense-bg { background-color: #A03196; }
            .ansi-cyan-fg { color: #60C6C8; }
            .ansi-cyan-bg { background-color: #60C6C8; }
            .ansi-cyan-intense-fg { color: #258F8F; }
            .ansi-cyan-intense-bg { background-color: #258F8F; }
            .ansi-white-fg { color: #C5C1B4; }
            .ansi-white-bg { background-color: #C5C1B4; }
            .ansi-white-intense-fg { color: #A1A6B2; }
            .ansi-white-intense-bg { background-color: #A1A6B2; }

            .ansi-default-inverse-fg { color: #FFFFFF; }
            .ansi-default-inverse-bg { background-color: #000000; }

            .ansi-bold { font-weight: bold; }
            .ansi-underline { text-decoration: underline; }


            div.nbinput.container div.input_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight].math,
            div.nboutput.container div.output_area.rendered_html,
            div.nboutput.container div.output_area > div.output_javascript,
            div.nboutput.container div.output_area:not(.rendered_html) > img{
                padding: 5px;
                margin: 0;
            }

            /* fix copybtn overflow problem in chromium (needed for 'sphinx_copybutton') */
            div.nbinput.container div.input_area > div[class^='highlight'],
            div.nboutput.container div.output_area > div[class^='highlight']{
                overflow-y: hidden;
            }

            /* hide copybtn icon on prompts (needed for 'sphinx_copybutton') */
            .prompt .copybtn {
                display: none;
            }

            /* Some additional styling taken form the Jupyter notebook CSS */
            div.rendered_html table {
            border: none;
            border-collapse: collapse;
            border-spacing: 0;
            color: black;
            font-size: 12px;
            table-layout: fixed;
            }
            div.rendered_html thead {
            border-bottom: 1px solid black;
            vertical-align: bottom;
            }
            div.rendered_html tr,
            div.rendered_html th,
            div.rendered_html td {
            text-align: right;
            vertical-align: middle;
            padding: 0.5em 0.5em;
            line-height: normal;
            white-space: normal;
            max-width: none;
            border: none;
            }
            div.rendered_html th {
            font-weight: bold;
            }
            div.rendered_html tbody tr:nth-child(odd) {
            background: #f5f5f5;
            }
            div.rendered_html tbody tr:hover {
            background: rgba(66, 165, 245, 0.2);
            }
        </style>
        <script>
            (!window.navigator.onLine ? alert('needs internet connection') : '');
        </script>
    </head>
    <body>
    
    <script src="" crossorigin="anonymous"></script>
    <script type="application/vnd.jupyter.widget-state+json">
    {
      "version_major": 2,
      "version_minor": 0,
      "state": {
        "3723e7338311475ab7f310b3cbc09006": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "children": [
              "IPY_MODEL_62cdd70865a34be7babc856e5d769917",
              "IPY_MODEL_8925577d41cd45ebb2ac3dcab2ec33df",
              "IPY_MODEL_833d97df64544771bfa031400abaeb6f"
            ],
            "layout": "IPY_MODEL_02dfcad47e694e2290e458dcf45bd7dd"
          }
        },
        "62cdd70865a34be7babc856e5d769917": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_49fcddf8ea034dfca9230a5315542a22",
            "style": "IPY_MODEL_db51b1119dba42a4bab74062f634819d",
            "value": "<style>.jupyter-widgets.widget-tab > .p-TabBar .p-TabBar-tab {flex: 0 1 auto}</style>"
          }
        },
        "49fcddf8ea034dfca9230a5315542a22": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "db51b1119dba42a4bab74062f634819d": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "8925577d41cd45ebb2ac3dcab2ec33df": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_9de7145d3a00423e83da573da1e94a8e",
            "style": "IPY_MODEL_7b182da6625544b49471255145817ccd",
            "value": "\n            <h1 id=\"summary_091C795RLQIOB0NLW0VS52SQ3\">Suite for Condition</h1>\n            <p>\n                The suite is composed of the following checks: Datasets Size Comparison.<br>\n                Each check may contain conditions (which will result in pass / fail / warning / error\n                , represented by \n<span style=\"color: green;display:inline-block\">\u2713</span> /\n<span style=\"color: red;display:inline-block\">\u2716</span> /\n<span style=\"color: orange;font-weight:bold;display:inline-block\">!</span> /\n<span style=\"color: firebrick;font-weight:bold;display:inline-block\">\u2048</span>\n) as well as other outputs such as plots or tables.<br>\n                Suites, checks and conditions can all be modified. Read more about\n                <a href=https://docs.deepchecks.com/en/stable/examples/guides/create_a_custom_suite.html?utm_source=display_output&utm_medium=referral&utm_campaign=suite_link target=\"_blank\">custom suites</a>.\n            </p>\n\n"
          }
        },
        "9de7145d3a00423e83da573da1e94a8e": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "7b182da6625544b49471255145817ccd": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "833d97df64544771bfa031400abaeb6f": {
          "model_name": "TabModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "_titles": {
              "0": "Checks With Conditions",
              "1": "Checks Without Conditions",
              "2": "Checks Without Output"
            },
            "children": [
              "IPY_MODEL_8d0df86d2fef4f1e86fb111fcc11a4ba",
              "IPY_MODEL_0153c14aa062430d82174a36f9e41cb1",
              "IPY_MODEL_27928a623d504f91bdd70402c5cbeb9a"
            ],
            "layout": "IPY_MODEL_adcaaa8ece47483391ced6a6679a4d07"
          }
        },
        "8d0df86d2fef4f1e86fb111fcc11a4ba": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [
              "rendered_html",
              "jp-RenderedHTMLCommon",
              "jp-RenderedHTML",
              "jp-OutputArea-output"
            ],
            "children": [
              "IPY_MODEL_45461b2ee76a4a8f887aead90a3c1ada",
              "IPY_MODEL_ad4532afa6a1429195af10edcbe93629",
              "IPY_MODEL_05a95e129c674a94aa983dd109613550"
            ],
            "layout": "IPY_MODEL_c6e328742a2f4ad4ac766cebfaa6e3de"
          }
        },
        "45461b2ee76a4a8f887aead90a3c1ada": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [
              "rendered_html",
              "jp-RenderedHTMLCommon",
              "jp-RenderedHTML",
              "jp-OutputArea-output"
            ],
            "layout": "IPY_MODEL_6a61417a01ce40fa85964fd044bb8f8b",
            "style": "IPY_MODEL_33374fb994604e9f9f4a4549ee78eeef",
            "value": "<h2>Conditions Summary</h2><style type=\"text/css\">\n#T_1efe2_ table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_1efe2_ thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_1efe2_ tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_1efe2_ th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_1efe2_ td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n</style>\n<table id=\"T_1efe2_\">\n  <thead>\n    <tr>\n      <th class=\"col_heading level0 col0\" >Status</th>\n      <th class=\"col_heading level0 col1\" >Check</th>\n      <th class=\"col_heading level0 col2\" >Condition</th>\n      <th class=\"col_heading level0 col3\" >More Info</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td id=\"T_1efe2_row0_col0\" class=\"data row0 col0\" ><div style=\"color: firebrick;text-align: center;font-weight:bold\">\u2048</div></td>\n      <td id=\"T_1efe2_row0_col1\" class=\"data row0 col1\" ><a href=#DatasetsSizeComparison_091C795RLQIOB0NLW0VS52SQ3>Datasets Size Comparison</a></td>\n      <td id=\"T_1efe2_row0_col2\" class=\"data row0 col2\" >Test-Train ratio is between 0.4 to 0.6</td>\n      <td id=\"T_1efe2_row0_col3\" class=\"data row0 col3\" >Exception in condition: NameError: name 'ConditionCategory' is not defined</td>\n    </tr>\n  </tbody>\n</table>\n"
          }
        },
        "6a61417a01ce40fa85964fd044bb8f8b": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "33374fb994604e9f9f4a4549ee78eeef": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "ad4532afa6a1429195af10edcbe93629": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_1760bcca2d0e404ea97b6fee0d6b4a1d",
            "style": "IPY_MODEL_f7dd64698cc2411aa9667b48e2f66d28",
            "value": "<h2>Check With Conditions Output</h2>"
          }
        },
        "1760bcca2d0e404ea97b6fee0d6b4a1d": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "f7dd64698cc2411aa9667b48e2f66d28": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "05a95e129c674a94aa983dd109613550": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [
              "rendered_html",
              "jp-RenderedHTMLCommon",
              "jp-RenderedHTML",
              "jp-OutputArea-output"
            ],
            "children": [
              "IPY_MODEL_583557c814154fec9d652d172fc8c2f7",
              "IPY_MODEL_b947cf8f4f85404aa377485ae6c982a8",
              "IPY_MODEL_2dadc4d3c5a140149a121a17fe82c827",
              "IPY_MODEL_6e057fb6c7e0410f83a6762b4cd37934"
            ],
            "layout": "IPY_MODEL_1fd5a53eb0b541d99a4aff0c664bf9bc"
          }
        },
        "583557c814154fec9d652d172fc8c2f7": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_96c940b08de04a999012590d5809121d",
            "style": "IPY_MODEL_3436c7267c834550886cbc15878d06da",
            "value": "<h4 id=\"DatasetsSizeComparison_091C795RLQIOB0NLW0VS52SQ3\"><b>Datasets Size Comparison</b></h4>"
          }
        },
        "96c940b08de04a999012590d5809121d": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "3436c7267c834550886cbc15878d06da": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "b947cf8f4f85404aa377485ae6c982a8": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_e4beb687ddbf446a8b980f60c69c7532",
            "style": "IPY_MODEL_951335697c6c4fb98b41ba00c89f6a20",
            "value": "<p>Verify test dataset size comparing it to the train dataset size.</p>"
          }
        },
        "e4beb687ddbf446a8b980f60c69c7532": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "951335697c6c4fb98b41ba00c89f6a20": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "2dadc4d3c5a140149a121a17fe82c827": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_c95cdb9734d74e769e3b2f0504bde672",
            "style": "IPY_MODEL_ba631037c8804163867773eb286d0878",
            "value": "<h5><b>Conditions Summary</b></h5><style type=\"text/css\">\n#T_ccfd3_ table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_ccfd3_ thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_ccfd3_ tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_ccfd3_ th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_ccfd3_ td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n</style>\n<table id=\"T_ccfd3_\">\n  <thead>\n    <tr>\n      <th class=\"col_heading level0 col0\" >Status</th>\n      <th class=\"col_heading level0 col1\" >Condition</th>\n      <th class=\"col_heading level0 col2\" >More Info</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td id=\"T_ccfd3_row0_col0\" class=\"data row0 col0\" ><div style=\"color: firebrick;text-align: center;font-weight:bold\">\u2048</div></td>\n      <td id=\"T_ccfd3_row0_col1\" class=\"data row0 col1\" >Test-Train ratio is between 0.4 to 0.6</td>\n      <td id=\"T_ccfd3_row0_col2\" class=\"data row0 col2\" >Exception in condition: NameError: name 'ConditionCategory' is not defined</td>\n    </tr>\n  </tbody>\n</table>\n"
          }
        },
        "c95cdb9734d74e769e3b2f0504bde672": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "ba631037c8804163867773eb286d0878": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "6e057fb6c7e0410f83a6762b4cd37934": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "children": [
              "IPY_MODEL_50ee10f582284fe3a026fc030109463f",
              "IPY_MODEL_f3673bd00d4748af8f2675fc6cb07f72",
              "IPY_MODEL_e4d74ecaa8a04e3bbb1b9c43c99e9699"
            ],
            "layout": "IPY_MODEL_38de300096fe4b8c8fcaf8f21f572a5a"
          }
        },
        "50ee10f582284fe3a026fc030109463f": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_daf891b58c3f41e79a690ca2a7f96f73",
            "style": "IPY_MODEL_6f3fb885e19840e9a281effe10209322",
            "value": "<h5><b>Additional Outputs</b></h5>"
          }
        },
        "daf891b58c3f41e79a690ca2a7f96f73": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "6f3fb885e19840e9a281effe10209322": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "f3673bd00d4748af8f2675fc6cb07f72": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_8a231158cb05420f9eea7085b1f7e337",
            "style": "IPY_MODEL_757812b628e3424b8e667ff869568993",
            "value": "<style type=\"text/css\">\n#T_e943a_ table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_e943a_ thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_e943a_ tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_e943a_ th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_e943a_ td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n</style>\n<table id=\"T_e943a_\">\n  <thead>\n    <tr>\n      <th class=\"blank level0\" >&nbsp;</th>\n      <th class=\"col_heading level0 col0\" >Train</th>\n      <th class=\"col_heading level0 col1\" >Test</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th id=\"T_e943a_level0_row0\" class=\"row_heading level0 row0\" >Size</th>\n      <td id=\"T_e943a_row0_col0\" class=\"data row0 col0\" >9</td>\n      <td id=\"T_e943a_row0_col1\" class=\"data row0 col1\" >3</td>\n    </tr>\n  </tbody>\n</table>\n"
          }
        },
        "8a231158cb05420f9eea7085b1f7e337": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "757812b628e3424b8e667ff869568993": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "e4d74ecaa8a04e3bbb1b9c43c99e9699": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_e8870609efa84392a9685373e6714ff8",
            "style": "IPY_MODEL_d06e5cf68716486b9ba5556348633f80",
            "value": "<br><a href=\"#summary_091C795RLQIOB0NLW0VS52SQ3\" style=\"font-size: 14px\">Go to top</a>"
          }
        },
        "e8870609efa84392a9685373e6714ff8": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "d06e5cf68716486b9ba5556348633f80": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "38de300096fe4b8c8fcaf8f21f572a5a": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "1fd5a53eb0b541d99a4aff0c664bf9bc": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "c6e328742a2f4ad4ac766cebfaa6e3de": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "0153c14aa062430d82174a36f9e41cb1": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [
              "rendered_html",
              "jp-RenderedHTMLCommon",
              "jp-RenderedHTML",
              "jp-OutputArea-output"
            ],
            "children": [
              "IPY_MODEL_1ed37f9e523a460eb1d6a337e61141a8"
            ],
            "layout": "IPY_MODEL_7d22eb326cdd43e48b968e14ece31d6f"
          }
        },
        "1ed37f9e523a460eb1d6a337e61141a8": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_be84025d8adc4ebcbb57417909f36822",
            "style": "IPY_MODEL_5ceb7eaea0294b41bc1ac93e567ac00e",
            "value": "<p>No outputs to show.</p>"
          }
        },
        "be84025d8adc4ebcbb57417909f36822": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "5ceb7eaea0294b41bc1ac93e567ac00e": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "7d22eb326cdd43e48b968e14ece31d6f": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "27928a623d504f91bdd70402c5cbeb9a": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [
              "rendered_html",
              "jp-RenderedHTMLCommon",
              "jp-RenderedHTML",
              "jp-OutputArea-output"
            ],
            "layout": "IPY_MODEL_b12d15fff6a74ea383731c1f28eeb792",
            "style": "IPY_MODEL_1e93e659164f4579b86e36bd7417d4bf",
            "value": "<p>No outputs to show.</p>"
          }
        },
        "b12d15fff6a74ea383731c1f28eeb792": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "1e93e659164f4579b86e36bd7417d4bf": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "adcaaa8ece47483391ced6a6679a4d07": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "02dfcad47e694e2290e458dcf45bd7dd": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        }
      }
    }
    </script>
    <script type="application/vnd.jupyter.widget-view+json">
    {"version_major": 2, "version_minor": 0, "model_id": "3723e7338311475ab7f310b3cbc09006"}
    </script>

    </body>
    </html>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 163-168

Set Custom Condition Category
=============================
When writing your own condition logic, you can decide to mark a condition result
as either fail or warn, by passing the category to the ConditionResult object.
For example we can even write condition which sets the category based on severity of the result:

.. GENERATED FROM PYTHON SOURCE LINES 168-184

.. code-block:: default


    from deepchecks.core import ConditionCategory, ConditionResult

    # Our parameters for the condition
    low_threshold = 0.3
    high_threshold = 0.7

    # Create the condition function for check `DatasetsSizeComparison`
    def custom_condition(value: dict): 
        ratio = value['Test'] / value['Train']
        if low_threshold <= ratio <= high_threshold:
            return ConditionResult(ConditionCategory.PASS)
        elif ratio < low_threshold:
            return ConditionResult(ConditionCategory.FAIL, f'Test-Train ratio is {ratio:.2}', ConditionCategory.FAIL)
        else:
            return ConditionResult(ConditionCategory.FAIL, f'Test-Train ratio is {ratio:.2}', ConditionCategory.WARN)








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.109 seconds)


.. _sphx_glr_download_user-guide_general_customizations_examples_plot_configure_check_conditions.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_configure_check_conditions.py <plot_configure_check_conditions.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_configure_check_conditions.ipynb <plot_configure_check_conditions.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
